# tabularasa

./: .gitignore  Cargo.toml  README.md  shell.nix
drawing/: Cargo.toml
drawing/src/: drawing.rs
executable/: Cargo.toml
executable/src/: gui_api.rs  lean_experiments.rs  main.rs  shader.rs
executable/src/lean_experiments/: gui_api.rs
gui_client/: Cargo.toml  shell.nix
lean/: Main.lean  Structural.lean  lake-manifest.json  lakefile.lean
src/: main.rs
